--- a/environment.yml
+++ b/environment.yml
@@ -13,4 +13,5 @@ dependencies:
     - imageio==2.1.2
     - pip:
         - moviepy
-        - tensorflow-gpu==1.4
+        - floyd-cli
+        - tensorflow==1.4
